[tool.poetry]
name = "saltdocker"
version = "0.1.0"
description = "Process for building docker containers with salt installed"
authors = ["Daniel Wallace <danielwallace@gtmanfred.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "^2.10"
aiohttp = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
